--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
                     <div>
                         <ul>
                             <label>USING BUDGETIFY</label>
-                            <li><img src="select box.png" style="transform: scale(0.7);margin-top: -8px;position: absolute;"> <span style="padding-left: 40px;">Click on the select box + for income - for expenses.</span>  </li> <br>
-                            <li><img src="description.png" style="transform: scale(0.7);margin-top: -8px;position: absolute;margin-left: -25px;"> <span style="padding-left: 134px;">Click on the select box + for income - for expenses.</span>  </li><br>
-                            <li><img src="thirdpics.png" style="transform: scale(0.7);margin-top: -8px;position: absolute;margin-left: -15px;"> <span style="padding-left: 80px;">Click on the select box + for income - for expenses.</span>  </li><br>
-                            <li><img src="fourth.png" style="transform: scale(0.7);margin-top: -8px;margin-left: -25px;justify-content: center;display: grid;"> <span style="padding-left: 134px;">Click on the select box + for income - for expenses.</span>  </li>
+                            <li><img src="select box.png" style=";margin-top: -8px;position: relative;"> <span>Click on the select box + for income - for expenses.</span>  </li> <br>
+                            <li><img src="description.png" style=";margin-top: -8px;position: relative;"> <span>Add The Title Description on this input tag eg Salary, Tips for Income and feeding Bought Phone for Ex.</span>  </li><br>
+                            <li><img src="thirdpics.png" style=";margin-top: -8px;position: relative;"> <span>Add the Amount Spent or Gained.</span>  </li><br>
+                            <li><img src="fourth.png" class="me" style="transform: scale(0.7);margin-top: -8px;margin-left: -25px;justify-content: center;display: grid;"> <span>The Ui Interface will get updated with its appopriate values.</span>  </li> <br>
+                            <li><img src="fifth.png" class="me" style="transform: scale(0.7);margin-top: -8px;margin-left: -25px;justify-content: center;display: grid;"> <span>You can also click on this button to reset your budget list.</span>  </li>
+                            
                         </ul>
                         
                     </div>
