--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <span style="background-color: #00ff00;"> </span>
 
             </div>
-            <a href="sign-up.html"><button class="register">Log Out</button> </a>
+            <a href="sign-up.html" style="margin-right: 15px;"><button class="register">Sign Up</button>  </a>
+            <a href="login.html"><button class="register">Register</button> </a>
         
         </div>  
     </nav>
@@ -46,10 +47,10 @@
                     <div>
                         <ul>
                             <label>USING BUDGETIFY</label>
-                            <li><img src="select box.png" style=";margin-top: -8px;position: relative;"> <span>Click on the select box + for income - for expenses.</span>  </li> <br>
-                            <li><img src="description.png" style=";margin-top: -8px;position: relative;"> <span>Add The Title Description on this input tag eg Salary, Tips for Income and feeding Bought Phone for Ex.</span>  </li><br>
-                            <li><img src="thirdpics.png" style=";margin-top: -8px;position: relative;"> <span>Add the Amount Spent or Gained.</span>  </li><br>
-                            <li><img src="fourth.png" class="me" style="transform: scale(0.7);margin-top: -8px;margin-left: -25px;justify-content: center;display: grid;"> <span>The Ui Interface will get updated with its appopriate values.</span>  </li> <br>
+                            <li><img src="select box.png" style=";margin-top: -8px;position: relative;"> <span>Click on the select box + for income - for expenses.</span>  </li> <br><br>
+                            <li><img src="description.png" style=";margin-top: -8px;position: relative;"> <span>Add The Title Description on this input tag eg Salary, Tips for Income and feeding Bought Phone for Ex.</span>  </li><br><br>
+                            <li><img src="thirdpics.png" style=";margin-top: -8px;position: relative;"> <span>Add the Amount Spent or Gained.</span>  </li><br><br>
+                            <li><img src="fourth.png" class="me" style="transform: scale(0.7);margin-top: -8px;margin-left: -25px;justify-content: center;display: grid;"> <span>The Ui Interface will get updated with its appopriate values.</span>  </li> <br><br>
                             <li><img src="fifth.png" class="me" style="transform: scale(0.7);margin-top: -8px;margin-left: -25px;justify-content: center;display: grid;"> <span>You can also click on this button to reset your budget list.</span>  </li>
                             
                         </ul>
